--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
     <meta charset="utf-8">
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <!-- Css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Title -->
     <title>Vue Dischi</title>
   </head>
   <body>
+
+    <header>
+      <img src="logo.png" alt="">
+    </header>
+
+    <main>
+
+      <div id="app">
+
+        <div class="card-album" v-for="disco in oggetti">
+
+          <img :src="disco.poster" alt="">
+          <h3>{{disco.title}}</h3>
+          <h5>{{disco.author}} <br> {{disco.year}}</h5>
+
+        </div>
+
+      </div>
+
+    </main>
 
     <!-- Vue (Development Version) -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
